mailchimp data object

--- a/signup.html
+++ b/signup.html
@@ -129,7 +129,7 @@
 <body class="text-center">
 
     <main class="form-signin w-100 m-auto">
-        <form>
+        <form action="/" method="post">
             <img class="mb-4" src="https://cdn-icons-png.flaticon.com/512/6133/6133461.png" alt="" width="72">
             <h1 class="h3 mb-3 fw-normal">Sign up for my news letter</h1>
 
@@ -138,7 +138,7 @@
 
 
 
-            <input type="text" class="form-control middle" name="seconName" placeholder="Second Name">
+            <input type="text" class="form-control middle" name="secondName" placeholder="Second Name">
 
 
 
